--- a/config.json
+++ b/config.json
@@ -12,17 +12,17 @@
 	"antiInbox": false,
 	"language": "en",
 	"notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-	"nickNameBot": "❀ėฬ𝔯 𝖋á𝒊ⲍ𐍈❀",
-	"prefix": "(",
+	"nickNameBot": "Miss Mahiru 🦋",
+	"prefix": "#",
 	"adminOnly": {
 		"enable": false,
 		"ignoreCommand": []
 	},
 	"adminBot": [
 		"100045644423035",
-		"61573492023196"
+		"100051997177668"
 	],
-	"owner": ["100045644423035"],
+	"owner": ["100051997177668"],
 	"whiteListMode": {
 		"enable": false,
 		"whiteListIds": [
